# raytrace-plusplus

./: CMakeLists.txt  README.md
include/: geometry.h  ppm.h
src/: CMakeLists.txt  geometry.cpp  ppm.cpp
tests/: CMakeLists.txt  testPPM.cpp
